2002-09-07  Manuel M T Chakravarty  <chak@AttitudeAdjuster>

	* configure.in: fixed REQUIRES_HASKELL for ghc

	* toplevel/Version.hs (versnum): 0.10.17

2002-09-06  Manuel M T Chakravarty  <chak@AttitudeAdjuster>

	* toplevel/C2HSConfig.hs.in (cppopts): Added "-x c" on suggestion
	by Axel Simon

	* Makefile (install): using --update-package instead of --add-package

	* configure.in: Fixed some nhc98 related issues

	* toplevel/Version.hs (versnum): 0.10.16

2002-07-12  Manuel M T Chakravarty  <chak@AttitudeAdjuster>

	* c2hs-config.in: added the system for which the package was
	compiled to the output of the --version option

	* c/CParser.hs (parseCStructUnion): Allow __extension__ in
	structure declarations and added `inline'.

	* c/CAST.hs: Added `inline'

	* c/CLexer.hs: Added support for `inline' keyword

2002-07-06  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/Version.hs (versnum): 0.10.15

2002-05-16  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* lib/C2HSMarsh.hs: added support for bit masks

	* toplevel/Version.hs (versnum): 0.10.14

2002-05-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (setGet): corrected bug in bit fiddling

2002-05-02  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/Version.hs (versnum): 0.10.13

2002-04-16  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/Version.hs (versnum): 0.10.12

2002-03-20  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHSLexer.hs (haskell): Debug the handling of character literals

	* toplevel/Version.hs (versnum): 0.10.11

2002-03-12  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* c2hs.spec.in: we now require the Haskell compiler to be the one
	for which the package was build

	* Makefile: adapted to revised build system

	* toplevel/Version.hs (versnum): 0.10.10

2002-03-06  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHSLexer.hs (haskell): Escape characters in Haskell strings