@@ -10,6 +10,7 @@ Michael Weber		 <michaelw@debian.org>
 Thanks for comments and suggestions to 
 
 Jan Kort		 <kort@science.uva.nl>
+Seth Kurtzberg		 <seth@cql.com>
 Simon Marlow		 <simonmar@microsoft.com>
 Sven Panne		 <Sven.Panne@informatik.uni-muenchen.de>
 Volker Wysk		 <post@volker-wysk.de>
